# DeepLearning.AI-RAG

./: .gitignore  pyproject.toml
assignments/assignment1/: C1M1_Assignment.ipynb  embeddings.joblib  unittests.py  utils.py
assignments/assignment2/: C1M2_Assignment.ipynb  embeddings.joblib  unittests.py  utils.py
assignments/assignment3/: C1M3_Assignment.ipynb  flask_app.py  unittests.py  utils.py  weaviate_server.py
assignments/assignment3/data/: bbc_collection_weaviate_export.joblib
assignments/assignment4/: C1M4_Assignment.ipynb  flask_app.py  unittests.py  utils.py
assignments/assignment4/dataset/: clothes_json.joblib
assignments/assignment5/: C1M5_Assignment.ipynb  flask_app.py  unittests.py  utils.py
labs/lab1/: C1M1_Ungraded_Lab_2.ipynb  utils.py
labs/lab2/: C1M2_Ungraded_Lab_1.ipynb  utils.py
labs/lab3/: C1M2_Ungraded_Lab_2.ipynb
labs/lab4/: C1M3_Ungraded_Lab_1.ipynb  data.joblib  flask_app.py  utils.py
labs/lab5/: C1M3_Ungraded_Lab_2.ipynb  flask_app.py  utils.py
labs/lab6/: C1M4_Ungraded_Lab_1.ipynb  utils.py
labs/lab7/: C1M4_Ungraded_Lab_2.ipynb  utils.py
labs/lab8/: C1M5_Ungraded_Lab_1.ipynb  faq.joblib  flask_app.py  utils.py  weaviate_server.py
weaviate-docker-client/: docker-compose.yml
