[project]
name = "rag"
version = "0.1.0"
description = "DeepLearning.AI RAG course"
authors = [
    {name = "Chinmay Pani",email = "chinmay09061998@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "^2.32.5"
together = "^1.5.31"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = ">=25.11.0,<26.0.0"}
ipykernel = "^7.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
