[project]
name = "rag"
version = "0.1.0"
description = "DeepLearning.AI RAG course"
authors = [
    {name = "Chinmay Pani",email = "chinmaypani42@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "^2.32.5"
together = "^1.5.31"
httpx = "^0.28.1"
openai = "^2.9.0"
pandas = "^2.3.3"
sentence-transformers = "^5.1.2"
scikit-learn = "^1.7.2"
joblib = "^1.5.2"
ipywidgets = "^8.1.8"
dlai-grader = "^2.2.0"
matplotlib = "^3.10.7"
adjusttext = "^1.3.0"
bm25s = "^0.2.14"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = ">=25.11.0,<26.0.0"}
ipykernel = "^7.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
